--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
   background-color: #000000;
   overflow-x: hidden;
   width: 100%;
+  scrollbar-gutter: stable;
 }
 
 body {
